data/derived/comb/progs/unify/prog1580.ml.out
Characters 21-24:
  let _ = app (fun y-> y+1) [1;2;4];;
                       ^^^
Error: This expression has type int but an expression was expected of type
         unit
